Remove template overflow issue

--- a/assets/css/sportspress.css
+++ b/assets/css/sportspress.css
@@ -22,8 +22,6 @@
 /* Templates */
 .sp-template {
 	margin-bottom: 1.5em;
-	overflow: hidden;
-	clear: both;
 }
 .sp-template-profile-selector {
 	clear: both;
